--- a/src/Modal/modal.module.css
+++ b/src/Modal/modal.module.css
@@ -1,37 +1,105 @@
 .modal {
-  display: block; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: block;
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 /* Modal Content/Box */
 .modal_content {
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
+  margin: 5% auto;
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  border-radius: 10px;
+  width: 50%;
   display: flex;
-  flex-direction: column;
 }
 
-.modal_row {
+.modal_content .left {
+  width: 35%;
+  background: linear-gradient(to right, #01a9ac, #01dbdf);
+  padding: 30px 25px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  text-align: center;
+  color: #fff;
+}
+
+.modal_content .left img {
+  width: 200px;
+  height: 200px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+.a {
+  text-decoration: none;
+  font-size: 20px;
+  color: black;
+}
+.modal_content .left a {
+  margin-bottom: 10px;
+  text-decoration: none;
+  font-size: 20px;
+  color: black;
+}
+
+.modal_content .left p {
+  font-size: 12px;
+}
+
+.modal_content .right {
+  width: 65%;
+  background: #fff;
+  padding: 30px 25px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.modal_content .right .basic_info {
+  margin-bottom: 25px;
+}
+
+.modal_content .right .info_data {
   display: flex;
+  justify-content: space-between;
+}
+
+.modal_content .right .info_data .data {
+  width: 45%;
+}
+.starsMargin {
+  margin-left: 10px;
+}
+.modal_content .right .additional_info .add_data .data a {
+  text-decoration: none;
+  font-size: 20px;
+  color: black;
+}
+.modal_content .right .info_data .data h4 {
+  color: #111;
+  margin-bottom: 5px;
+}
+
+.modal_content .right .info_data .data p {
+  font-size: 13px;
+  margin-bottom: 10px;
+  color: #919aa3;
 }
 
 /* The Close Button */
 .close {
-  color: #aaa;
+  color: black;
   float: right;
-  font-size: 28px;
+  font-size: 15px;
   font-weight: bold;
+  margin-top: 10px;
+  margin-right: 10px;
 }
 
 .close:hover,
@@ -39,4 +107,8 @@
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+.contributorLink {
+  text-decoration: none;
+  color: black;
 }
