--- a/src/navBar/navBar.module.css
+++ b/src/navBar/navBar.module.css
@@ -12,7 +12,7 @@
   text-decoration: none;
 }
 .item a {
-  display: block;
+  display: flex;
   color: white;
   text-align: center;
   padding: 14px 16px;
